successfully extend base.html to index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
     <title>tanDev - tandem exchanges for developers</title>
 </head>
 <body>
+
     
+
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
