wire up a main.css

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name ="description" content="a skill exchange website based in Berlin which seeks to connect developers and designers with each other who wish to exchange their skills.">
+    <meta name="description"
+        content="a skill exchange website based in Berlin which seeks to connect developers and designers with each other who wish to exchange their skills.">
     <meta name="author" content="Carina Pöll">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>tanDev - tandem exchanges for developers</title>
+
+    <!-- Load stylesheets -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        type="text/css" />
+
+        <link rel="stylesheet" type="text/css" href="static/css/main.css" />
 </head>
+
 <body>
 
-    
+
 
     {% block content %}
     {% endblock %}
 </body>
+
 </html>
