--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,55 @@
 {% extends 'base.html' %}
 
-  <!-- BEGIN NAVBAR -->
 
-  <div class="container-fluid navbar-container">
-    <nav class="navbar navbar-light bg-light fixed-top navbar-expand" id="navbar">
+<!-- BEGIN NAVBAR -->
 
-
-        <!-- Dropdown Button -->
-
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-
-            <!-- Navbar Menu Items -->
-
-
-            <ul class="navbar-nav nav-fill w-100" id="menuButtons">
-
-                <li class="active nav-item mr-2" id="navHome">
-                    <div class="nav-link hvr-bounce-in"><img src="" class="img-fluid home-img"
-                            alt="home-icon"></div>
-                </li>
-
-
-                <li class="active nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block " id="navAbout">
-                    <a class="nav-link hvr-bounce-in" id="navAboutLink">About</a>
-                </li>
-
-                <li class="active nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block " id="navSearch">
-                    <a class="nav-link hvr-bounce-in" id="navSearchLink">Search</a>
-                </li>
-
-                <li class="active nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block" id="navLogReg">
-                    <a class="nav-link hvr-bounce-in" id="navLogRegLink">Login/Register</a>
-                </li>
-            </ul>
+<div class="container-fluid navbar-container">
+        <nav class="navbar navbar-light bg-light fixed-top navbar-expand" id="navbar">
+    
+    
+            <!-- Dropdown Button -->
+    
+    
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    
+                <!-- Navbar Menu Items -->
+    
+    
+                <ul class="navbar-nav nav-fill w-100" id="menuButtons">
+    
+                    <li class="active nav-item mr-2" id="navHome">
+                        <div class="navbar-brand hvr-bounce-in"><img src="" class="img-fluid home-img" alt="home-icon"></div>
+                    </li>
+    
+    
+                    <li class="nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block " id="navAbout">
+                        <a class="nav-link hvr-bounce-in" id="navAboutLink">About</a>
+                    </li>
+    
+                    <li class="nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block " id="navSearch">
+                        <a class="nav-link hvr-bounce-in" id="navSearchLink">Search</a>
+                    </li>
+    
+                    <li class="nav-item mr-2 mt-0 mb-0 d-xs-none d-md-block" id="navLogReg">
+                        <a class="nav-link hvr-bounce-in" id="navLogRegLink">Login/Register</a>
+                    </li>
+                </ul>
+            </div>
+    
+        </nav>
+    </div>
+    
+    <section id="hero">
+        <div class="h-text">
+            <h1>tanDev</h1>
+            <p class="lead">exchange your skills with other developers and designers!</p>
+            <a href="#" class="btn btn-primary">Sign up!</a>
         </div>
-
-    </nav>
-</div>
+    
+    
+    
+    </section>
+    
+        </body>
+        </html>
+    
