attempt to link css file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block content %}
 
 <!-- BEGIN NAVBAR -->
 
@@ -49,7 +50,7 @@
     
     
     </section>
-    
-        </body>
-        </html>
+
+    {% endblock %}
+
     
