--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
 
-        <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
 <body>
-
-<h1>I am base html</h1>
-
     {% block content %}
+    
     {% endblock %}
 </body>
 
