trying to get scss to compile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,4 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
-
 html {
   background: red;
 }
-
-.lead {
-  color: red;
-}
+/*# sourceMappingURL=main.css.map */
