--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,8 @@
             <h1>tanDev</h1>
             <p class="lead">exchange your skills with other developers and designers!</p>
             <a href="#" class="btn btn-primary">Sign up!</a>
+
+            <p>I'm from index.html</p>
         </div>
     
     
