display hero image correctly.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,9 @@
 #hero {
-  background: url("/static/img/hero.jpg") center center cover no-repeat fixed;
+  background: url("/static/img/hero.jpg") center center no-repeat fixed;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   height: 80vh;
 }
 /*# sourceMappingURL=main.css.map */
