--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,10 +1,10 @@
 @import "_variables.scss";
 
 #hero {
-    background: url("/static/img/hero.jpg") center center cover no-repeat fixed;
+    background: url("/static/img/hero.jpg") center center no-repeat fixed;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
     height: 80vh;
 }
