--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -1,7 +1,18 @@
+//Colors
+
 $midblue:  #7791B4;
 $lightblue: #B0C3D2;
+$green: #049683;
 $teal: #1C2541;
 $darkblue: #0B132B;
 $redbrown: #75424B;
 $purplegrey: #574B60;
 $pink: #ee4266;
+
+// Media query breakpoints
+
+$bp-mini: 576px;
+$bp-mobile: 768px;
+$bp-tablet: 992px;
+$bp-ipadpro: 1024px;
+$bp-desktop: 1200px;
