--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,10 @@
 #hero {
   background: url("/static/img/puzzle-lg.jpg") no-repeat;
   background-size: cover !important;
-  background-position: center top;
+  background-position: center center;
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
-  height: 60vh;
+  height: 100vh;
 }
 
 @media (max-width: 576px) {
