--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -1,19 +1,20 @@
 #hero {
     background: url("/static/img/puzzle-lg.jpg") no-repeat;
     background-size: cover !important;
-    background-position: center top;
+    background-position: center center;
     -moz-background-size: cover !important;
     -o-background-size: cover !important;
-    height: 60vh;
+    height: 100vh;
+
+    @media (max-width: $bp-mini) {
+
+            background: url("/static/img/puzzle-xs.jpg") no repeat;
+            background-size: cover;
+            height: 50vh;
+    
+
 
 
 }
-@media (max-width: $bp-mini) {
-    #hero {
-        background: url("/static/img/puzzle-xs.jpg") no repeat;
-        background-size: cover;
-        height: 50vh;
 
-    }
 }
-
