--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,17 +1,35 @@
 #hero {
-  background: url("/static/img/puzzle-lg.jpg") no-repeat;
+  background: url("/static/img/puzzle-uncropped-xs.jpg") center center no-repeat;
   background-size: cover !important;
   background-position: center center;
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
-  height: 100vh;
+  height: 60vh;
 }
 
-@media (max-width: 576px) {
+@media (min-width: 992px) {
   #hero {
-    background: url("/static/img/puzzle-xs.jpg") no repeat;
+    background: url("/static/img/puzzle-md.jpg");
+    background-position: center center;
+    height: 70vh;
+  }
+}
+
+@media (min-width: 1024px) {
+  #hero {
+    background: url("/static/img/puzzle-lg.jpg");
+    background-position: center center;
     background-size: cover;
-    height: 50vh;
+    height: 80vh;
+  }
+}
+
+@media (min-width: 1200px) {
+  #hero {
+    background: url("/static/img/puzzle-lg.jpg");
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
   }
 }
 /*# sourceMappingURL=main.css.map */
