--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -1,20 +1,32 @@
 #hero {
-    background: url("/static/img/puzzle-lg.jpg") no-repeat;
+    background: url("/static/img/puzzle-uncropped-xs.jpg") center center no-repeat;
     background-size: cover !important;
     background-position: center center;
     -moz-background-size: cover !important;
     -o-background-size: cover !important;
-    height: 100vh;
+    height: 60vh;
 
-    @media (max-width: $bp-mini) {
+    @media (min-width: $bp-tablet) {
+        background: url("/static/img/puzzle-md.jpg");
+        background-position: center center;
+        height: 70vh;
 
-            background: url("/static/img/puzzle-xs.jpg") no repeat;
-            background-size: cover;
-            height: 50vh;
-    
+    }
 
+    @media (min-width: $bp-ipadpro) {
+        background: url("/static/img/puzzle-lg.jpg");
+        background-position: center center;
+        background-size: cover;
+        height: 80vh;
 
+    }
 
-}
+    @media (min-width: $bp-desktop) {
+        background: url("/static/img/puzzle-lg.jpg");
+        background-position: center center;
+        background-size: cover;
+        height: 100vh;
+
+    }
 
 }
