expand color palette

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -2,3 +2,4 @@
 @import "_components.scss";
 @import "_layout.scss";
 
+// For comments on some of the thought processes behind the CSS, please look at main.css.
