--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -1,6 +1,8 @@
 //Colors
 
 $midblue:  #7791B4;
+$brightmidblue: #2581B0;
+$brightlightblue: #8EDAF4;
 $lightblue: #B0C3D2;
 $green: #049683;
 $teal: #1C2541;
