--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -3,6 +3,7 @@
 $midblue:  #7791B4;
 $brightmidblue: #2581B0;
 $brightlightblue: #8EDAF4;
+$darkbrightblue: #2A65B0;
 $lightblue: #B0C3D2;
 $green: #049683;
 $teal: #1C2541;
