--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -22,7 +22,7 @@
     }
 
     @media (min-width: $bp-desktop) {
-        background: url("/static/img/puzzle-lg.jpg");
+        background: url("/static/img/puzzle-lg-cropped.jpg");
         background-position: center center;
         background-size: cover;
         height: 100vh;
@@ -31,6 +31,16 @@
 
 }
 
+#index-carousel {
+    height: 100vh;
+}
+
 html {
     scroll-behavior: smooth;
   }
+
+//   Navbar
+
+.bg-light {
+    background-color: transparent !important;
+}
