--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <!-- Dropdown Button -->
     
     
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
     
                 <!-- Navbar Menu Items -->
     
@@ -51,6 +51,10 @@
     
     
     
+    </section>
+
+    <section id="index-carousel">
+        
     </section>
 
     {% endblock %}
