add jQuery to change navbar colors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,4 +44,8 @@ html {
 .bg-light {
   background-color: transparent !important;
 }
+
+.bg-light.scrolled {
+  background-color: #1C2541 !important;
+}
 /*# sourceMappingURL=main.css.map */
