--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,23 @@
     </section>
 
     <section id="index-carousel">
-        
+
     </section>
 
+<!-- 
+    Change Color Upon Scroll  -->
+
+    <script>
+    
+    $( window ).scroll(function() {
+    $("nav").toggleClass('scrolled', $(this).scrollTop() > 100);
+});
+
+
+    </script>
+
+
     {% endblock %}
+
 
     
