--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -44,3 +44,7 @@ html {
 .bg-light {
     background-color: transparent !important;
 }
+
+.bg-light.scrolled {
+    background-color: $teal !important;  
+}
