--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
 
+       
+
+
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
 <body>
-    {% block content %}
+    {% block content %} {% endblock %}
 
-    {% endblock %}
+
+    <!-- Bootstrap scripts -->
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>  
+
+
+    <!-- Project scripts, with conditional loading depending on the active page -->
+
+    {% if active == 'index' %}
+
+    <script src="{{url_for('static', filename='js/index.js')}}
+   
 </body>
 
 </html>
