get scroll functionality to work.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,6 +46,6 @@ html {
 }
 
 .bg-light.scrolled {
-  background-color: #1C2541 !important;
+  background-color: #2581B0 !important;
 }
 /*# sourceMappingURL=main.css.map */
