--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -46,5 +46,5 @@ html {
 }
 
 .bg-light.scrolled {
-    background-color: $teal !important;  
+    background-color: $brightmidblue !important;  
 }
