--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+    <!-- Common metadata, such as information on the author and a description.  -->
+    
     <meta charset="UTF-8">
     <meta name="description"
         content="a skill exchange website based in Berlin which seeks to connect developers and designers with each other who wish to exchange their skills.">
