--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,27 +3,30 @@
 {% block content %}
 
 
-    
-    <section id="hero">
+
+<section id="hero">
+    <div class="row">
+
+        <div class="col d-flex justify-content-center align-items-center"  id="hero-content">
+
+
         <div class="h-text">
             <h1>tanDev</h1>
             <p class="lead">exchange your skills with other developers and designers!</p>
             <a href="#" class="btn btn-primary">Sign up!</a>
 
-            <p>I'm from index.html</p>
         </div>
-    
-    
-    
-    </section>
-
-    <section id="index-carousel">
-
-    </section>
+    </div>
+</div>
 
 
 
-    {% endblock %}
+</section>
+
+<section id="index-carousel">
+
+</section>
 
 
-    
+
+{% endblock %}
