--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -18,7 +18,7 @@
             <ul class="navbar-nav nav-fill w-100" id="menuButtons">
 
                 <li class="active nav-item mr-2" id="navHome">
-                    <div class="navbar-brand hvr-bounce-in"><img src="" class="img-fluid home-img" alt="home-icon">
+                    <div class="navbar-logo hvr-bounce-in"><img src="/static/img/logos/tandev_v1_brightlightblue.svg" class="img-fluid navLogo" alt="logo">
                     </div>
                 </li>
 
