--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -39,11 +39,12 @@
     {% block content %} {% endblock %}
 
 
-    <!-- Bootstrap scripts -->
+    <!-- Scripts -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Project scripts, with conditional loading depending on the active page -->
 
