--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,17 +7,18 @@
 <section id="hero">
     <div class="row">
 
-        <div class="col d-flex justify-content-center align-items-center"  id="hero-content">
+        <div class="col d-flex justify-content-center align-items-center" id="hero-content">
 
 
-        <div class="h-text">
-            <h1>tanDev</h1>
-            <p class="lead">exchange your skills with other developers and designers!</p>
-            <a href="#" class="btn btn-primary">Sign up!</a>
+            <div class="h-text">
+                <img src="/static/img/logos/tandev_v1_darkblue.svg" class="img-fluid" alt="tandev-logo-gradient">
+                <p class="lead">exchange your skills with other developers and designers!</p>
+                <a href="#" class="btn btn-primary">Sign up!</a>
 
+            </div>
         </div>
     </div>
-</div>
+
 
 
 
