--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -11,7 +11,7 @@
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" id="hamburger"></span>
         </button>
 
         <!-- Dropdown Button -->
