--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -5,9 +5,10 @@ html {
     overflow-x: hidden;
 }
 
-.test-class {
-    color: red;
+.container-fluid {
+    padding: 0;
 }
+
 //   Navbar
 
 .navLogo {
@@ -28,6 +29,10 @@ html {
 
 .bg-light {
     background-color: transparent !important;
+
+    @media(max-width: $bp-tablet) {
+        background-color: $darkblue !important;
+    }
 }
 
 .bg-light.scrolled {
