align navbar items

--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -22,17 +22,17 @@
             <!-- Navbar Menu Items -->
 
 
-            <ul class="navbar-nav nav-fill w-100">
+            <ul class="navbar-nav ml-auto nav-fill w-50">
 
-                <li class="nav-item mr-2 mt-0 mb-0" id="navAbout">
+                <li class="nav-item" id="navAbout">
                     <a class="nav-link hvr-bounce-in" href="#" id="navAboutLink">About</a>
                 </li>
 
-                <li class="nav-item mr-2 mt-0 mb-0" id="navSearch">
+                <li class="nav-item" id="navSearch">
                     <a class="nav-link hvr-bounce-in" href="#" id="navSearchLink">Search</a>
                 </li>
 
-                <li class="nav-item mr-2 mt-0 mb-0" id="navLogReg">
+                <li class="nav-item" id="navLogReg">
                     <a class="nav-link hvr-bounce-in" href="#" id="navLogRegLink">Login/Register</a>
                 </li>
             </ul>
