--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,8 +105,20 @@ html {
   font-family: 'Montserrat', sans-serif;
 }
 
+@media (max-width: 992px) {
+  .nav-link {
+    color: white !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .navbar-collapse {
+    margin-right: 35%;
+  }
+}
+
 .nav-link.scrolled {
-  color: #B0C3D2 !important;
+  color: white !important;
 }
 
 .bg-light {
@@ -121,5 +133,11 @@ html {
 
 .bg-light.scrolled {
   background-color: #2581B0 !important;
+}
+
+@media (max-width: 992px) {
+  .bg-light.scrolled {
+    background-color: #0B132B !important;
+  }
 }
 /*# sourceMappingURL=main.css.map */
