--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,18 +5,28 @@
 
 
 <section id="hero">
+
+    <div class="img-overlay">&nbsp;</div>
+
     <div class="row">
 
-        <div class="col d-flex justify-content-center align-items-center" id="hero-content">
+        <div class="col-12 d-flex justify-content-center align-items-center d-block" id="hero-content">
 
 
             <div class="h-text">
                 <img src="/static/img/logos/tandev_v1_darkblue.svg" class="img-fluid" alt="tandev-logo-gradient">
-                <p class="lead">exchange your skills with other developers and designers!</p>
-                <a href="#" class="btn btn-primary">Sign up!</a>
+                <p class="lead" id="lead">exchange your skills with other developers and designers!</p>
 
             </div>
         </div>
+        <div class="col-12 d-block" id="hero-btn">
+
+            <a href="#" class="btn btn-primary">Sign up!</a>
+
+        </div>
+
+
+
     </div>
 
 
