--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,7 @@
   background-position: center center;
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
+  position: relative;
   height: 60vh;
 }
 
@@ -72,6 +73,40 @@
 
 #h-text {
   text-align: center !important;
+}
+
+#lead {
+  font-weight: bold;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  margin-top: 5vh;
+}
+
+#hero-btn {
+  position: absolute;
+  left: 45%;
+  top: 75%;
+}
+
+@media (max-width: 767px) {
+  #hero-btn {
+    left: 33%;
+  }
+}
+
+@media (min-width: 768px) {
+  #hero-btn {
+    left: 42%;
+  }
+}
+
+.img-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 #index-carousel {
