--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -59,24 +59,25 @@
 
 #lead {
     font-weight: bold;
-    background:rgba(255,255,255,0.3);
+    background: rgba(255, 255, 255, 0.3);
     border-radius: 25px;
     margin-top: 5vh;
 }
 
 #hero-btn {
-position: absolute;
-left: 45%;
-top: 75%;
+    position: absolute;
 
-@media (max-width: 767px) {
+    top: 75%;
     left: 33%;
-}
 
-@media (min-width: $bp-mobile) {
-    left: 42%;
-}
 
+    @media (min-width: $bp-mobile) {
+        left: 42%;
+    }
+
+    @media (min-width: $bp-ipadpro) {
+        left: 45%;
+    }
 }
 
 .img-overlay {
@@ -86,8 +87,8 @@ top: 75%;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
-  }
-  
+}
+
 
 #index-carousel {
     height: 100vh;
