--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,9 +13,9 @@
         <div class="col-12 d-flex justify-content-center align-items-center d-block" id="hero-content">
 
 
-            <div class="h-text">
-                <img src="/static/img/logos/tandev_v1_darkblue.svg" class="img-fluid" alt="tandev-logo-gradient">
-                <p class="lead" id="lead">exchange your skills with other developers and designers!</p>
+            <div class="h-text text-center">
+                <img src="/static/img/logos/tandev_v1_darkblue.svg" class="img-fluid main-logo" alt="tandev-logo-gradient">
+                <h2 id="lead">exchange your skills with other developers and designers!</h2>
 
             </div>
         </div>
