--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -58,10 +58,25 @@
 }
 
 #lead {
-    font-weight: bold;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 25px;
     margin-top: 5vh;
+    font-size: 1rem !important;
+    text-shadow: 0.1rem 0.1rem 0.8rem white;
+
+    @media (min-width: $bp-ipadpro) {
+        font-size: 2rem !important;
+    }
+}
+
+.main-logo {
+
+    max-width: 80%;
+    margin-left: 1vh;
+
+    @media (min-width: $bp-ipadpro) {
+        max-width: 100%;
+ 
+    }
+   
 }
 
 #hero-btn {
