scale and re-position callout button

--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -89,10 +89,13 @@
     @media (min-width: $bp-mobile) {
         left: 42%;
     }
+}
+
+#btn-itself {
 
     @media (min-width: $bp-ipadpro) {
-        left: 45%;
-    }
+    font-size: 2rem;
+}
 }
 
 .img-overlay {
