--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-12 d-block" id="hero-btn">
 
-            <a href="#" class="btn btn-primary">Sign up!</a>
+            <a href="#" class="btn btn-primary btn-large" id="btn-itself">Sign up!</a>
 
         </div>
 
