--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -30,6 +30,7 @@ body {
 
 .nav-link {
     color: $darkblue !important;
+    text-transform: uppercase;
     font-size: 1.2em;
     font-family: 'Montserrat', sans-serif;
 
