--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,6 +13,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>tanDev - tandem exchanges for developers</title>
 
+
+ <!-- Load favicon -->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/static/img/favicon.ico">
+
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
