--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,6 +8,7 @@
 
     <div class="img-overlay">&nbsp;</div>
 
+    <div class="container-fluid">
     <div class="row">
 
         <div class="col-12 d-flex justify-content-center align-items-center d-block" id="hero-content">
@@ -19,9 +20,9 @@
 
             </div>
         </div>
-        <div class="col-12 d-block" id="hero-btn">
+        <div class="col-12 d-block" id="btn-div">
 
-            <a href="#" class="btn btn-primary btn-large" id="btn-itself">Sign up!</a>
+            <a href="#" class="btn btn-primary btn-large" id="hero-btn">Sign up!</a>
 
         </div>
 
@@ -30,11 +31,14 @@
     </div>
 
 
+</div>
 
 
 </section>
 
 <section id="index-carousel">
+
+    <div class="section-header"
 
 </section>
 
