--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -1,5 +1,9 @@
 // This SCSS file contains components which are used only once across the various pages.
 
+// INDEX HTML
+
+// Landing Page
+
 @mixin height-scaling {
     height: 60vh;
 
@@ -83,7 +87,7 @@
 #btn-div {
     position: absolute;
 
-    top: 75%;
+    top: 72%;
     left: 33%;
 
 
@@ -117,6 +121,17 @@
 }
 
 
+// Index Carousel
+
 #index-carousel {
     height: 100vh;
+}
+
+.card-body {
+    height: 50vh;
+}
+
+.carousel-row {
+    max-width: 75%;
+    margin: 0 auto;
 }
