--- a/static/css/main.css
+++ b/static/css/main.css
@@ -95,7 +95,7 @@
 
 @media (min-width: 1024px) {
   .main-logo {
-    max-width: 100%;
+    max-width: 70%;
   }
 }
 
@@ -156,6 +156,11 @@ html {
 
 body {
   max-width: 100%;
+}
+
+a {
+  text-decoration: none !important;
+  color: black;
 }
 
 .container-fluid {
