add picture to card

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -74,7 +74,7 @@
                 <a class="card index-card" href="">
                     <div class="card-img-wrapper">
                         <!-- Inline style used here to import link with jinja -->
-                        <img class="card-img-top" src="https://placeholder.com/200.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="https://www.pexels.com/photo/asian-female-asian-girl-cute-girl-fashion-model-2033768/" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
