--- a/static/css/main.css
+++ b/static/css/main.css
@@ -144,6 +144,13 @@
   height: 50vh;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .carousel-row {
   max-width: 75%;
   margin: 0 auto;
