--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -132,6 +132,12 @@
 
 }
 
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
 .carousel-row {
     max-width: 75%;
     margin: 0 auto;
